--- a/sass/site/blog/blog-layouts/_blog-common.scss
+++ b/sass/site/blog/blog-layouts/_blog-common.scss
@@ -13,6 +13,9 @@
 .entry-header {
     margin-bottom: 1em;
     word-wrap: break-word;
+    + .ast-blog-featured-section{
+    	margin-top:0.5em;
+    }
 }
 
 .entry-content {
@@ -29,8 +32,15 @@
 	}
 }
 
-.ast-no-thumb .ast-blog-featured-section {
-	margin-bottom: 0;
+.ast-no-thumb {
+	.ast-blog-featured-section {
+		margin-bottom: 0;
+	}
+	.entry-header {
+		+ .ast-blog-featured-section{
+			margin-top:0;
+		}
+	}
 }
 
 .ast-blog-featured-section {
