--- a/sass/site/blog/single-post-layouts/_single-post-common.scss
+++ b/sass/site/blog/single-post-layouts/_single-post-common.scss
@@ -68,20 +68,35 @@
 	}
 }
 /* 2 - Single Post Article Header */
-.single,
-.page {
-	.post-thumb {
-		img {
-			margin-bottom: 2em;
+.single {
+	.entry-header {
+		.ast-single-post-order {
+			+ .post-thumb {
+				img {
+					margin-top: 2em;
+					margin-bottom: 0;
+				}
+			}
 		}
-		&.second-section {
+		.post-thumb {
 			img {
-				margin-top: 2em;
-				margin-bottom: 0;
+				margin-top: 0;
+				margin-bottom: 2em;
+			}
+		}
+
+	}
+}
+.page {
+	.has-post-thumbnail {
+		.post-thumb {
+			img {
+				margin-bottom: 1.5em;
 			}
 		}
 	}
 }
+
 .post-password-form {
     text-align: center;
     @media ( max-width: $mx-col-xs ) {
